Fixed detail spacing

--- a/loansum.css
+++ b/loansum.css
@@ -439,7 +439,7 @@ table {
 	margin-top: 10px;	
 }
 .editTable{
-	margin-top: 35px;
+	margin-top: 20px;
 }
 }
 /*<<<<<<< HEAD   ARE THESE FIELDS USED? HAS A TYPO IN JOHN'S VERSION
